<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="20sp" />
        <View
            android:layout_width="20dp"
            android:layout_height="8dp"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_views">

        </View>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:minHeight="200sp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="15dp"
                >
                <LinearLayout
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textAlignment="center"
                        android:text="@string/dashboard_status"
                        android:textSize="20sp"
                        android:textColor="#6f6f6f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/conn_status"
                        android:textAlignment="center"
                        android:text="@string/actual_status"
                        android:textSize="18sp"
                        android:textColor="#6f6f6f"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="15dp"
                >
                <LinearLayout
                    android:padding="6dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textAlignment="center"
                        android:text="@string/balance"
                        android:textSize="20sp"
                        android:textColor="#6f6f6f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/incoming"
                        android:textAlignment="center"
                        android:text="@string/actual_balance"
                        android:textSize="18sp"
                        android:textColor="#6f6f6f"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="200sp"
            app:cardElevation="6dp"
            app:cardCornerRadius="15dp"
            android:layout_margin="15dp"
            >
            <LinearLayout
                android:id="@+id/button"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:onClick="GSecond"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="100sp"
                    android:layout_height="150sp"
                    android:src="@drawable/money"
                    android:onClick="GSecond"
                    android:padding="3dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textAlignment="center"
                    android:text="@string/transaction"
                    android:onClick="GSecond"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
        android:layout_width="130dp"
        android:layout_height="200sp"
        app:cardElevation="6dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="15dp"
        >
        <LinearLayout
            android:id="@+id/button2"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:onClick="GSecond2"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="150sp"
                android:layout_gravity="center"
                android:onClick="GSecond2"
                android:padding="3dp"
                android:src="@drawable/chart" />
            <TextView
                android:textSize="17sp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="#000000"
                android:text="@string/consumption"
                android:onClick="GSecond2"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/restatus"
            android:textSize="25sp"
            android:layout_margin="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relay"
            android:padding="5sp"
            android:textSize="25sp"
            android:text="@string/rstatus"
            android:layout_margin="10sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/toggle" />

</LinearLayout>